--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
         </div>
         <div class="line"></div>
         <div class="copy">
-            <span>&copy; Cloned by Karan Yadav</span>
+            <span>&copy; Cloned by Sneh Barot</span>
         </div>
     </section>
     <script src="app.js"></script>
